--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#3B82F6",
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐼</text></svg>",
+      "src": "./icon-192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐼</text></svg>",
+      "src": "./icon-512.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
