--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#3B82F6",
   "icons": [
     {
-      "src": "./icon-192.png",
+      "src": "./panda-icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./icon-512.png",
+      "src": "./panda-icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
